--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,3 @@
 <h1>Welcome to Bookscape</h1>
-<p>Find and track your favorite books here.</p>
+<%= render 'quote' %>
 <%= link_to 'Sign out', destroy_user_session_path, data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }%>
