implement server-parser-presenter-view pattern for basic search

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<%= render "layouts/header" %>
+// <%= render "layouts/header" %>
 <%= render 'quote' %>
 <% @books_by_status.each do |status, books| %>
   <section>
