--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -5,16 +5,11 @@
   <%= form.text_field :query, placeholder: "Enter a book title or author..." %>
   <%= form.submit "Search" %>
 <% end %>
-<% if @results %>
-  <% @results["items"].each do |book| %>
+<% if @books %>
+  <% @books.each do |book| %>
     <div class="book-card">
-      <h2><%= book["volumeInfo"]["title"] %></h2>
-      <p><%= book["volumeInfo"]["authors"].join(", ") if book["volumeInfo"]["authors"] %></p>
-      <p><%= book["volumeInfo"]["categories"].join(", ") if book["volumeInfo"]["categories"] %></p>
-      <p><%= book["volumeInfo"]["description"] %></p>
-      <% if book["volumeInfo"]["imageLinks"] && book["volumeInfo"]["imageLinks"]["thumbnail"] %>
-        <img src="<%= book["volumeInfo"]["imageLinks"]["thumbnail"] %>" alt="<%= book["volumeInfo"]["title"] %>">
-      <% end %>
+      <h4><%= book.title %></h4>
+      <p><%= book.authors %></p>
     </div>
   <% end %>
 <% end %>
