add reading status to the book in the search results

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -10,6 +10,6 @@
     <div class="book-card">
       <h4><%= book.title %></h4>
       <p><%= book.authors %></p>
-    </div>
+      <p><%= book.reading_status %></p>
+    <% end %>
   <% end %>
-<% end %>
