--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -5,25 +5,19 @@
   <%= form.text_field :query, placeholder: "Enter a book title or author..." %>
   <%= form.submit "Search" %>
 <% end %>
-<% if @books %>
-  <% @books.each do |book_hash| %>
+<% if @books_data %>
+  <% @books_data.each do |book| %>
     <div class="book-card">
-      <h4><%= book_hash[:book][:title] %></h4>
-      <p><%= book_hash[:book][:authors] %></p>
-      <p><%= book_hash[:book][:google_id] %></p>
+      <h4><%= book[:title] %></h4>
+      <p><%= book[:authors] %></p>
+      <p><%= book[:google_id] %></p>
       <%= form_with url: books_path, method: :post, local: true do |form| %>
-        <%= form.hidden_field :title, value: book_hash[:book][:title] %>
-        <% book_hash[:book][:authors].each do |author| %>
-          <%= form.hidden_field :authors, multiple: true, value: author %>
-        <% end %>
-        <%= form.hidden_field :google_id, value: book_hash[:book][:google_id] %>
-        <%= form.label :status, book_hash[:status] %>
-        <%= form.select :status, options_for_select([
-            ["Add Book ..."],
-            ["Want to Read", "want_to_read"],
-            ["Reading", "reading"],
-            ["Read", "read"],
-          ], book_hash[:status]), {}, { onchange: "this.form.submit();" } %>
+        <%= form.hidden_field :google_id, value: book[:google_id], name: "book[google_id]" %>
+        <%= form.collection_select :status,
+          UserBook.statuses.keys.map { |status| [status.titleize, status] },
+          :last, :first, {include_blank: "Add Book ...", selected: book[:status]},
+          { onchange: "this.form.submit();", name: "book[status]" }
+        %>
       <% end %>
     </div>
   <% end %>
