--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -11,6 +11,7 @@
       <h4><%= book[:title] %></h4>
       <p><%= book[:authors] %></p>
       <p><%= book[:google_id] %></p>
+      <p><%= book[:main_category] %></p>
       <%= form_with url: books_path, method: :post, local: true do |form| %>
         <%= form.hidden_field :google_id, value: book[:google_id], name: "book[google_id]" %>
         <%= form.collection_select :status,
