add description to model, controller, services and views

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,6 +3,7 @@
     <%= book[:title] %> -
     <%= book[:status] %> -
     <%= book[:authors] %> -
-    <%= book[:main_category] %>
+    <%= book[:main_category] %> -
+    <%= book[:description] %>
   </p>
 <% end %>
