--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
     <%= javascript_importmap_tags %>
   </head>
   <body>
-    <%= render "layouts/header" %>
-    <%= yield %>
+    <div class="container">
+      <%= render "layouts/header" %>
+      <%= yield %>
+    </div>
   </body>
 </html>
