add new fields to db and render them into separate edition details section on the books pages

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,4 +7,5 @@
     <%= book[:main_category] %> -
     <%= book[:description] %>
   </p>
+  <%= render "edition_details", book: book[:edition_details] %>
 <% end %>
