--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,6 @@
 <% @books_with_status.each do |book| %>
   <p><%= image_tag(book[:cover_url_thumbnail], alt: book[:title]) %></p>
+  <p><%= link_to book[:title], book_path(book), target: "_blank" %></p>
   <p>
     <%= book[:title] %> -
     <%= book[:status] %> -
