--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,12 +1,28 @@
-<% @books_with_status.each do |book| %>
-  <p><%= image_tag(book[:cover_url_thumbnail], alt: book[:title]) %></p>
-  <p><%= link_to book[:title], book_path(book), target: "_blank" %></p>
-  <p>
-    <%= book[:title] %> -
-    <%= book[:status] %> -
-    <%= book[:authors] %> -
-    <%= book[:main_category] %> -
-    <%= book[:description] %>
-  </p>
-  <%= render "edition_details", book: book[:edition_details] %>
-<% end %>
+<div class="content">
+  <div class="sidebar">
+    <%= form_with url: books_path, method: :get, local: true, class: "sticky" do |form| %>
+      <div class="sort-by">
+        <h3>Sort By</h3>
+        <%= form.select :sort,
+          [['Title (A-Z)', 'title_asc'], ['Title (Z-A)', 'title_desc']],
+          { selected: params[:sort] || 'title_asc', include_blank: false },
+          { onchange: "this.form.submit();" } %>
+      </div>
+      <div class="filter-by">
+        <h3>Filter by Status</h3>
+        <% UserBook.statuses.keys.each do |status| %>
+          <%= check_box_tag 'statuses[]', status, params[:statuses]&.include?(status), id: "status-#{status}", onchange: 'this.form.submit();' %>
+          <%= label_tag "status-#{status}", status.titleize %>
+          <br>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
+  <div class="main-content">
+    <div class="book-list">
+      <%= turbo_frame_tag 'book_list' do %>
+        <%= render partial: 'book', collection: @books_with_status, as: :book %>
+      <% end %>
+    </div>
+  </div>
+</div>
