--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,3 +5,4 @@
 </div>
 <p><%= @book.description %></p>
 <p><%= @book.isbn_13 %></p>
+<%= render partial: 'books/reading_status', locals: { google_id: @book.google_id } %>
