--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -1,3 +1,5 @@
+@import 'book/book_card';
+
 .content {
   display: grid;
   grid-template-columns: 1fr;
@@ -47,7 +49,7 @@
   max-height: 90vh;
 }
 
-@media (min-width: 480px) {
+@media (min-width: 680px) {
   .content {
     grid-template-columns: 200px 1fr;
     padding-top: 30px;
