--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -7,26 +7,7 @@
 <div class="search-results">
   <% if @books_data %>
     <% @books_data.each do |book| %>
-      <div class="book-card" data-google-id="<%= book[:google_id] %>">
-        <div class="book-image">
-          <%= image_tag(book[:cover_url_thumbnail], alt: book[:title]) %>
-        </div>
-        <div class="book-info">
-          <h2 class="book-title"><%= book[:title] %></h2>
-          <h3 class="book-author"><%= book[:authors].join(", ") %></h3>
-          <section class="book-genre">
-            <h4>Genre: </h4>
-            <p><%= book[:main_category].join(", ") %></p>
-          </section>
-          <section class="book-description">
-            <h4>About this Book:</h4>
-            <p><%= book[:short_description] %></p>
-          </section>
-          <div>
-            <%= render partial: "books/reading_status", locals: {google_id: book[:google_id]} %>
-          </div>
-        </div>
-      </div>
+      <%= render partial: "search_book", locals: {book: book, layout: "search"} %>
     <% end %>
   <% end %>
 </div>
