--- a/app/assets/stylesheets/book/_book_card.scss
+++ b/app/assets/stylesheets/book/_book_card.scss
@@ -77,8 +77,6 @@
 
   @media (min-width: 480px) {
     .book-card {
-      // grid-template-columns: auto 1fr;
-      // border-bottom: 1px solid #d6d6d6;
       padding-bottom: 20px;
 
       .image-status-container {
@@ -129,19 +127,24 @@
   @media (min-width: 680px) {
     .book-card {
       grid-template-columns: auto 1fr;
-    }
 
-    .book-image {
-      display: flex;
-      align-items: top;
-      justify-content: center;
-      width: 150px;
-      height: 200px;
+      .book-image {
+        display: flex;
+        align-items: top;
+        justify-content: center;
+        width: 150px;
+        height: 200px;
 
-      img {
-        max-width: 100%;
-        height: auto;
-        object-fit: contain;
+        img {
+          max-width: 100%;
+          height: auto;
+          object-fit: contain;
+        }
+      }
+
+      .book-status {
+        width: 100%;
+        padding-left: 10px;
       }
     }
   }
