--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -45,9 +45,6 @@
       height: 200px;
 
       img {
-        // height: 200px;
-
-        // width: auto;
         max-width: 100%;
         height: auto;
         object-fit: contain;
@@ -91,6 +88,13 @@
           font-weight: bold;
         }
       }
+
+      // .custom-select {
+      //   max-width: 120px;
+      //   height: 30px;
+      //   font-size: 0.9em;
+      //   padding: 5px;
+      // }
     }
   }
 
