--- a/app/views/books/_reading_status.html.erb
+++ b/app/views/books/_reading_status.html.erb
@@ -1,12 +1,19 @@
 <%# Expects locals: google_id %>
 <%# reading_status_options defined in book_helper %>
 <%# current_reading_status defined in book_helper %>
-<%= form_with url: books_path, method: :post, local: true do |form| %>
+<%= form_with url: books_path, method: :post, local: true, html: { class: "form-group" } do |form| %>
   <%= form.hidden_field :google_id, value: google_id, name: "book[google_id]" %>
   <%= form.collection_select :status,
           reading_status_options,
-          :last, :first, {include_blank: "Add Book ...",
-          selected: current_reading_status(google_id) },
-          { onchange: "this.form.submit();", name: "book[status]" }
+          :last, :first,
+          {
+            include_blank: "Add Book ...",
+            selected: current_reading_status(google_id)
+          },
+          {
+            onchange: "this.form.submit();",
+            name: "book[status]",
+            class: "form-control custom-select"
+          }
         %>
 <% end %>
