add basic styles to book details page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,7 @@
 @import 'quote';
 @import 'search';
 @import 'books';
+@import 'book_page';
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 @import 'book/edition_details';
