add flash messages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 @import 'reset';
 @import 'variables';
 @import 'reading_status';
+@import 'flash';
 @import 'header';
 @import 'home';
 @import 'quote';
