--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
   <body>
     <div class="container">
       <%= render "layouts/header" %>
+      <% flash.each do |message_type, message| %>
+        <div class="flash-message <%= message_type %>">
+          <%= message %>
+        </div>
+      <% end %>
       <%= yield %>
     </div>
   </body>
