--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,5 @@
 <%#temp book-list class to reuse styles created for books page %>
 <div class="book-list book-page-container">
   <%= render partial: 'book', locals: {book: @book} %>
-  <%= render partial: 'edition_details', locals: {book: params[:edition_details]} %>
+  <%= render partial: 'edition_details', locals: {book: @book[:edition_details]} %>
 </div>
