--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -19,7 +19,7 @@
     </section>
     <section class="book-description">
       <h4>About this Book:</h4>
-      <p><%= book[:description].html_safe %></p>
+      <p><%= book[:short_description].html_safe %></p>
     </section>
   </div>
 </div>
