add user_book controller and view

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,6 +9,7 @@
       <ul class="nav-list">
         <li class="nav-item"><%= link_to "Home", root_path, class: "nav-link", id: "nav-home-link" %></li>
         <li class="nav-item"><%= link_to "My books", books_path, class: "nav-link" %></li>
+        <li class="nav-item"><%= link_to "Library", user_books_path, class: "nav-link" %></li>
         <li class="nav-item">Charts (Soon...)</li>
       </ul>
     </nav>
