--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,14 +1,17 @@
-<h2>Add Review for <%= @book.title %></h2>
-<%= form_with(model: [@book, @review], url: book_review_path(@book), local: true) do |form| %>
+<h2>New Review for <%= @user_book.book.title %></h2>
+<%= form_with(model: @review,
+              url: user_book_review_path,
+              method: :post,
+              local: true) do |form| %>
   <div class="field">
     <%= form.label :rating %>
-    <%= form.number_field :rating, in: 0.0..5.0, step: 0.5 %>
+    <%= form.number_field :rating, in: 1..5, step: 0.5 %>
   </div>
   <div class="field">
     <%= form.label :comment %>
     <%= form.text_area :comment %>
   </div>
   <div class="actions">
-    <%= form.submit "Save Review", class: "btn btn-primary" %>
+    <%= form.submit "Add Review" %>
   </div>
 <% end %>
