--- a/app/views/user_books/index.html.erb
+++ b/app/views/user_books/index.html.erb
@@ -1,12 +1,26 @@
-<% @user_books.each do |user_book| %>
-  <div class="book-entry">
-    <h3><%= user_book.book.title %></h3>
-    <p>Status: <%= user_book.status.titleize %></p>
-    <% if user_book.review.present? %>
-      <p>Review: <%= user_book.review.comment %></p>
-      <p>Rating: <%= user_book.review.rating %></p>
-    <% else %>
-      <p>No review yet.</p>
+<div class="content">
+  <div class="sidebar">
+    <%= form_with url: books_path, method: :get, local: true, class: "sticky" do |form| %>
+      <div class="sort-by">
+        <h3>Sort By</h3>
+        <%= form.select :sort,
+          [['Title (A-Z)', 'title_asc'], ['Title (Z-A)', 'title_desc']],
+          { selected: params[:sort] || 'title_asc', include_blank: false },
+          { onchange: "this.form.submit();" } %>
+      </div>
+      <div class="filter-by">
+        <h3>Filter by Status</h3>
+        <% UserBook.statuses.keys.each do |status| %>
+          <%= check_box_tag 'statuses[]', status, params[:statuses]&.include?(status), id: "status-#{status}", onchange: 'this.form.submit();' %>
+          <%= label_tag "status-#{status}", status.titleize %>
+          <br>
+        <% end %>
+      </div>
     <% end %>
   </div>
-<% end %>
+  <div class="main-content">
+    <div class="book-list">
+      <%= render partial: 'book', collection: @user_books, as: :user_book %>
+    </div>
+  </div>
+</div>
