fix update status functionality for existing books

--- a/app/views/user_books/_book.html.erb
+++ b/app/views/user_books/_book.html.erb
@@ -10,7 +10,7 @@
       <% end %>
     </div>
     <div class="book-status">
-      <%= render partial: "reading_status", locals: {user_book: user_book } %>
+      <%= render partial: "update_status", locals: {user_book: user_book } %>
     </div>
     <% if user_book.status == "read" %>
       <div>
