--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -7,5 +7,5 @@
 <%# results container to display books with current reading status if found in libray %>
 <div class="search-results">
   <%= render partial: "book", collection: @books, as: :book if @books.present? %>
-  <%= "No books found. Please try a different search term." unless @books.present? %>
+  <%= "Empty State Message Goes There" unless @books.present? %>
 </div>
