--- a/app/views/user_books/_book.html.erb
+++ b/app/views/user_books/_book.html.erb
@@ -35,7 +35,7 @@
     </section>
     <section class="book-description">
       <h4>About this Book:</h4>
-      <p><%= book.short_description.html_safe %></p>
+      <p><%= book.description.html_safe %></p>
     </section>
   </div>
 </div>
