--- a/app/views/user_books/_update_status.html.erb
+++ b/app/views/user_books/_update_status.html.erb
@@ -4,6 +4,9 @@
   method: :patch,
   local: true,
   html: { class: "form-group" }) do |form| %>
+  <%= form.hidden_field :google_id,
+      value: user_book.book.google_id,
+      name: "user_book[google_id]" %>
   <!-- Dropdown for selecting the status -->
   <%= form.collection_select :status,
       UserBook.statuses.keys.map { |status| [status.titleize, status] },
