--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,12 +4,12 @@
     <div class="section-info">
       <h2><%= status.titleize %></h2>
       <p><%= pluralize(books.count, 'book') %></p>
-      <%= link_to "View All >", books_path(sort: "title_asc", statuses: [status]) %>
+      <%= link_to "View All >", user_books_path(sort: "title_asc", statuses: [status]) %>
     </div>
     <div class="books">
       <% books.each do |book| %>
         <div class="book">
-          <%= link_to book_path(book), class: "book-link" do %>
+          <%= link_to user_book_path(book), class: "book-link" do %>
             <%= image_tag book[:cover_url_thumbnail], alt: book[:title], class: "book-cover" %>
           <% end %>
         </div>
