--- a/app/views/user_books/_book.html.erb
+++ b/app/views/user_books/_book.html.erb
@@ -5,7 +5,7 @@
 <div class="book-card" data-google-id="<%= book.google_id %>">
   <div class=image-status-container>
     <div class="book-image">
-      <%= link_to user_book_path(book), class: "book-link" do %>
+      <%= link_to user_book_path(user_book), class: "book-link" do %>
         <%= image_tag(book.cover_url_thumbnail, alt: book.title, class: "book-cover") %>
       <% end %>
     </div>
