--- a/app/views/user_books/index.html.erb
+++ b/app/views/user_books/index.html.erb
@@ -1,22 +1,6 @@
 <div class="content">
   <div class="sidebar">
-    <%= form_with url: user_books_path, method: :get, local: true, class: "sticky" do |form| %>
-      <div class="sort-by">
-        <h3>Sort By</h3>
-        <%= form.select :sort,
-          [['Title (A-Z)', 'title_asc'], ['Title (Z-A)', 'title_desc']],
-          { selected: params[:sort] || 'title_asc', include_blank: false },
-          { onchange: "this.form.submit();" } %>
-      </div>
-      <div class="filter-by">
-        <h3>Filter by Status</h3>
-        <% UserBook.statuses.keys.each do |status| %>
-          <%= check_box_tag 'statuses[]', status, params[:statuses]&.include?(status), id: "status-#{status}", onchange: 'this.form.submit();' %>
-          <%= label_tag "status-#{status}", status.titleize %>
-          <br>
-        <% end %>
-      </div>
-    <% end %>
+    <p>Filters go here</p>
   </div>
   <div class="main-content">
     <div class="book-list">
