add structure for custom css system design and update header

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="container">
-      <%= render "layouts/header" %>
+      <%= render "layouts/navbar" %>
       <% flash.each do |message_type, message| %>
         <div class="flash-message <%= message_type %>">
           <%= message %>
