--- a/app/assets/stylesheets/layouts/_footer.scss
+++ b/app/assets/stylesheets/layouts/_footer.scss
@@ -1,22 +1,25 @@
 .footer {
-  background-color: #f9f9f9;
+  background-color: #f5f5f5;
   text-align: center;
+  width: 100%;
 
-  @include respond-to('tabletAndUp') {
-    // padding: 1rem 3rem;
-  }
-
+  // TODO: refactor footer/header content container with max width
   &__content {
-    padding: 1rem 0 2rem;
     display: grid;
     grid-template-columns: 1fr;
-    gap: 1rem; // review
+    gap: 1rem;
+    // margin: 0 auto;
+    padding: 1rem 2.5rem 2rem;
 
     @include respond-to('tabletAndUp') {
-      padding: 1rem 0;
       grid-template-columns: 1fr auto;
-      justify-content: space-between;
+      padding: 1rem 2.5rem;
       text-align: left; // Align content left on larger screens
+    }
+
+    @include respond-to('desktopAndUp') {
+      max-width: 90rem; // 1440px
+      margin: 0 auto; // works with max-width to center content
     }
   }
 
