--- a/app/assets/stylesheets/layouts/_header.scss
+++ b/app/assets/stylesheets/layouts/_header.scss
@@ -1,17 +1,25 @@
 .header {
   // TODO: move color to a global variable
-  background-color: #f9f9f9;
+  background-color: #f5f5f5;
 
-  display: grid;
-  grid-template-columns: 1fr auto;
-  align-items: center;
-  padding: 1rem 0;
+  &__content {
+    display: grid;
+    grid-template-columns: 1fr auto;
 
-  transition: background-color 0.3s ease-in-out;
+    align-items: center;
+    padding: 1rem;
 
-  @include respond-to('tabletAndUp') {
-    grid-template-columns: repeat(12, 1fr); // 12 equal columns
-    padding: 1.5rem 0;
+    transition: background-color 0.3s ease-in-out;
+
+    @include respond-to('tabletAndUp') {
+      grid-template-columns: repeat(12, 1fr); // 12 equal columns
+      padding: 1.5rem 2.5rem;
+    }
+
+    @include respond-to('desktopAndUp') {
+      max-width: 90rem; // 1440px
+      margin: 0 auto; // works with max-width to center content
+    }
   }
 
   /* Modifier to change background color when menu is open */
