--- a/app/assets/stylesheets/layouts/_header.scss
+++ b/app/assets/stylesheets/layouts/_header.scss
@@ -1,4 +1,5 @@
 .header {
+  position: relative;
   // TODO: move color to a global variable
   background-color: #f5f5f5;
 
@@ -20,11 +21,6 @@
       max-width: 90rem; // 1440px
       margin: 0 auto; // works with max-width to center content
     }
-  }
-
-  /* Modifier to change background color when menu is open */
-  &--menu-open {
-    background-color: black;
   }
 
   &__logo {
@@ -60,5 +56,43 @@
   &__icon {
     height: 48px;
     vertical-align: middle;
+  }
+
+  /* Dropdown styling */
+  &__dropdown {
+    display: none; /* Hidden by default */
+    position: absolute; /* Overlay the content below */
+    top: 100%; /* Place it just below the header */
+    left: 0;
+    width: 100%;
+    background-color: #000;
+    color: #fff;
+    z-index: 1000; /* Ensure it stays above the other content */
+    padding: 1rem;
+    transition: all 0.3s ease-in-out;
+
+    /* Apply clip-path to create the angled edge */
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+
+    // TODO: refactor nested styles
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    li {
+      padding: 0.75rem 0;
+      text-align: left;
+    }
+  }
+
+  &__dropdown--open {
+    display: block; /* Show the dropdown */
+  }
+
+  /* When menu is open, display the dropdown */
+  &--menu--open {
+    background-color: black;
   }
 }
