--- a/app/assets/stylesheets/layouts/_header.scss
+++ b/app/assets/stylesheets/layouts/_header.scss
@@ -92,7 +92,18 @@
   }
 
   /* When menu is open, display the dropdown */
-  &--menu--open {
+  &__menu--open {
     background-color: black;
+  }
+
+  .header__profile-dropdown {
+    display: none; /* Hidden by default */
+    padding-left: 1rem;
+    list-style: none;
+  }
+
+  /* When Profile is clicked, show the profile dropdown */
+  .header__profile-dropdown--open {
+    display: block; /* When Profile is clicked, show the dropdown */
   }
 }
