update home page layout

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,4 @@
 <p><%= @quote %></p>
 <p><%= @author %></p>
-<h1>Books Grouped by Statuses</h1>
+<h1>Books Grouped by Reading Status</h1>
+<h1>Books Grouped by Want to Read Status</h1>
