--- a/app/assets/stylesheets/components/home_page.scss
+++ b/app/assets/stylesheets/components/home_page.scss
@@ -1,41 +1,40 @@
 .home-wrapper {
   display: grid;
-  grid-template-columns: 1fr;
-  width: 100%;
-}
-
-.home-section {
-  display: grid;
-  grid-template-columns: 1fr;
+  grid-auto-flow: row;
+  gap: 20px;
 }
 
 .reading-goal {
-  min-height: 300px;
+  min-height: 200px;
   background-color: lightcoral;
 }
 
-.status-shelves {
-  background-color: lightblue;
-  display: grid;
-  grid-auto-rows: minmax(300px, auto);
-  gap: 10px;
+.custom-shelves {
+  min-height: 200px;
+  background-color: burlywood;
 }
 
-.status-shelf {
-  background-color: #f0f0f0;
+.status-shelves {
+  display: grid;
+  grid-auto-flow: row;
+  gap: 20px;
+}
 
-  &__header {
-    display: grid;
-    grid-template-columns: 1fr auto;
-  }
+.heading {
+  display: grid;
+  grid-template-rows: auto;
+  gap: 5px;
+  width: 100%;
+  justify-content: start;
 
   &__title {
     font-weight: bold;
+    color: #379158;
   }
 
   &__meta {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 1fr auto 1fr;
     align-items: center;
     gap: 1rem;
   }
@@ -49,15 +48,40 @@
     font-size: 0.9rem;
   }
 
-  &__books {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-    gap: 1rem;
-    margin-bottom: 1rem;
+  @include respond-to('tabletAndUp') {
+    grid-template-columns: 1fr auto;
   }
 }
 
-.custom-shelves {
-  min-height: 300px;
-  background-color: burlywood;
+.home-wrapper {
+  display: grid;
+  grid-auto-flow: row;
+  gap: 20px;
+}
+.home-section {
+  display: grid;
+  grid-auto-flow: row;
+  gap: 20px;
+}
+
+.status-shelf {
+  display: grid;
+  grid-auto-flow: column;
+  overflow-x: auto;
+  gap: 15px;
+  justify-content: start;
+
+  padding-bottom: 20px;
+  border-bottom: 1px solid #e0e0e0;
+
+  &__book {
+    display: flex;
+    align-items: top;
+  }
+
+  &__book-cover {
+    height: 180px;
+    max-width: auto;
+    object-fit: contain;
+  }
 }
