--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,34 +1,35 @@
 <div class="home-wrapper">
-  <section class="home-section">
-    <div class="reading-goal">
-      <h2>Reading goal block will go there...</h2>
-    </div>
+  <section class="reading-goal">
+    <h2>Reading goal block will go there...</h2>
   </section>
-  <section class="home-section">
-    <div class="status-shelves">
-      <% @books_by_status.each do |status, user_books| %>
-        <div class="status-shelf">
-          <div class="status-shelf__header">
-            <h2 class="status-shelf__title"><%= group_label_for(status) %></h2>
-            <div class="status-shelf__meta">
-              <span class="status-shelf__count"><%= pluralize(user_books.count, 'book') %></span>
-              <span>|</span>
-              <%= link_to "View All", user_books_path(status: status), class: "status-shelf__view-all" %>
-            </div>
-          </div>
-          <div class="status-shelf__books">
-            <% user_books.each do |user_book| %>
-              <%= image_tag "no_cover" %>
-            <% end %>
-          </div>
+  <section class="status-shelves">
+    <% @books_by_status.each do |status, books| %>
+      <div class="heading">
+        <div class="heading__title">
+          <%= group_label_for(status) %>
         </div>
-      <% end %>
-    </div>
+        <div class="heading__meta">
+          <span class="heading__count">
+            <%= pluralize(books.count, "book") %>
+          </span>
+          <span>|</span>
+          <span>
+            <%= link_to "View all", user_books_path, class: "heading__view-all" %>
+          </span>
+        </div>
+      </div>
+      <div class="status-shelf">
+        <% books.each do |book| %>
+          <div class="status-shelf__book">
+            <%= image_tag "no_cover", class: "status-shelf__book-cover" %>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
   </section>
-  <section class="home-section">
-    <!-- Custom shelves -->
-    <div class="custom-shelves">
-      <h2>Custom shelves section will go there...</h2>
-    </div>
+  <section class="custom-shelves">
+    <h2>Custom shelves section will go there...</h2>
+    <h2>And another shelf...</h2>
+    <h2>And another shelf...</h2>
   </section>
 </div>
