--- a/app/assets/stylesheets/components/home_page.scss
+++ b/app/assets/stylesheets/components/home_page.scss
@@ -20,7 +20,13 @@
   gap: 20px;
 }
 
-.heading {
+.status-shelf {
+  display: grid;
+  grid-auto-flow: row;
+  gap: 20px;
+}
+
+.status-shelf-heading {
   display: grid;
   grid-template-rows: auto;
   gap: 5px;
@@ -32,7 +38,7 @@
     color: #379158;
   }
 
-  &__meta {
+  &__info {
     display: grid;
     grid-template-columns: 1fr auto 1fr;
     align-items: center;
@@ -53,18 +59,7 @@
   }
 }
 
-.home-wrapper {
-  display: grid;
-  grid-auto-flow: row;
-  gap: 20px;
-}
-.home-section {
-  display: grid;
-  grid-auto-flow: row;
-  gap: 20px;
-}
-
-.status-shelf {
+.status-shelf_books {
   display: grid;
   grid-auto-flow: column;
   overflow-x: auto;
