add structure to the books page

--- a/app/views/user_books/index.html.erb
+++ b/app/views/user_books/index.html.erb
@@ -1,2 +1,23 @@
-<h1>UserBook#index</h1>
-<p>Find me in app/views/user_book/index.html.erb</p>
+<div>
+  <!-- Breadcrumb -->
+  <nav class="breadcrumb">
+    <a href="/">Home</a> / My Books
+  </nav>
+  <!-- my books header -->
+  <header class="page-title">
+    <h1>My Books</h1>
+    <div> books image goes here </div>
+  </header>
+  <!-- Filters and Sorting Controls -->
+  <section>
+    <button>Filter</button> <!-- Toggle for mobile -->
+    <button>Search</button>
+    <button>List</button>
+    <button>Grid</button>
+    <div>Date Filter</div>
+    <div>Sort By</div>
+  </section>
+  <!-- Main Content Area -->
+  <main>
+  </main>
+</div>
